--- a/assets/css/argon-design-system.css
+++ b/assets/css/argon-design-system.css
@@ -19441,7 +19441,7 @@ header {
   left: 0;
   height: 100%;
   width: 100%;
-  background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url("https://images.unsplash.com/photo-1513258496099-48168024aec0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80") no-repeat center center fixed;
+  background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url("../../assets/img/photo.jpg") no-repeat center center fixed;
   /* background-color: #2C2C2C; */
   opacity: .3;
   z-index: 1; }
