--- a/assets/css/argon-design-system.css
+++ b/assets/css/argon-design-system.css
@@ -19463,14 +19463,14 @@ header {
   background-size: cover !important;
   background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url("../../assets/img/GOJI-IELTS-3.jpg") fixed;
   /* background-color: #2C2C2C; */
-  opacity: .3;
+  opacity: .88;
   z-index: 1; }
 
 
 
   @media (max-width: 767px) {
     .header-4 .header-video .overlay {
-      position: absolute;
+      /* position: absolute; */
       top: 0;
       left: 0;
       /* width:100%; */
@@ -19478,7 +19478,7 @@ header {
       background-size: cover !important;
       background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url("../../assets/img/GOJI-IELTS-3.jpg") fixed;
       /* background-color: #2C2C2C; */
-      opacity: .3;
+      opacity: .88;
       z-index: 1; }
      }
 
