--- a/assets/css/argon-design-system.css
+++ b/assets/css/argon-design-system.css
@@ -19470,10 +19470,10 @@ header {
 
   @media (max-width: 767px) {
     .header-4 .header-video .overlay {
-      /* position: absolute; */
+      position: absolute;
       top: 0;
       left: 0;
-      /* width:100%; */
+      width:100%;
       height:100vh;
       background-size: cover !important;
       background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url("../../assets/img/GOJI-IELTS-3.jpg") fixed;
