--- a/assets/css/argon-design-system.css
+++ b/assets/css/argon-design-system.css
@@ -338,6 +338,7 @@ h6, .h6 {
 .display-2 {
   font-size: 2.75rem;
   font-weight: 600;
+  font-family: 'CeraGR-Regular';
   line-height: 1.5; }
 
 .display-3 {
@@ -1868,7 +1869,7 @@ fieldset:disabled a.btn {
 
 .btn-info {
   color: #fff;
-  background-color: #11cdef;
+  background-color: #5DA5AA;
   border-color: #11cdef;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08); }
   .btn-info:hover {
@@ -5042,7 +5043,7 @@ button.bg-secondary:focus {
   background-color: #d6dae2 !important; }
 
 .bg-success {
-  background-color: #2dce89 !important; }
+  background-color: #5DA5AA !important; }
 
 a.bg-success:hover, a.bg-success:focus,
 button.bg-success:hover,
@@ -17061,199 +17062,7 @@ hr {
   content: url("data:image/svg+xml;utf8,<svg width='6' height='10' viewBox='0 0 6 10' fill='none' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M3 0L6 4H0L3 0ZM3 10L0 6H6L3 10Z' fill='%23525f7f'/></svg>");
   margin-left: .25rem; }
 
-.register-page .page-header .container {
-  background-color: #fff;
-  border-radius: .25rem;
-  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
-  position: relative;
-  overflow: hidden;
-  width: 768px;
-  max-width: 100%;
-  min-height: 480px; }
 
-.register-page .page-header .page-header-image {
-  z-index: 1 !important; }
-
-.register-page .footer {
-  background: #172b4d; }
-  .register-page .footer h3,
-  .register-page .footer h4,
-  .register-page .footer .copyright a {
-    color: #fff; }
-
-.register-page h1 {
-  font-weight: bold;
-  margin: 0; }
-
-.register-page p {
-  font-size: 14px;
-  font-weight: 100;
-  line-height: 20px;
-  letter-spacing: 0.5px;
-  margin: 20px 0 30px; }
-
-.register-page a {
-  color: #333;
-  font-size: 14px;
-  text-decoration: none; }
-
-.register-page button {
-  transition: transform 80ms ease-in; }
-
-.register-page button:active {
-  transform: scale(0.95); }
-
-.register-page button:focus {
-  outline: none; }
-
-.register-page button.ghost {
-  background-color: transparent;
-  border-color: #fff; }
-
-.register-page form {
-  background-color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0 50px;
-  height: 100%;
-  text-align: center; }
-
-.register-page .form-container .form-group {
-  width: 100%; }
-
-.register-page .social-container {
-  margin: 20px 0; }
-
-.register-page .social-container a {
-  border: 1px solid #dddddd;
-  border-radius: 50%;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 5px;
-  height: 40px;
-  width: 40px; }
-
-.register-page .form-container {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  transition: all 0.6s ease-in-out; }
-
-.register-page .sign-in-container {
-  left: 0;
-  width: 50%;
-  z-index: 2; }
-
-.register-page .sign-up-container {
-  left: 0;
-  width: 50%;
-  opacity: 0;
-  z-index: 1; }
-
-.register-page .container.right-panel-active .sign-in-container {
-  transform: translateX(100%); }
-
-.register-page .container.right-panel-active .sign-up-container {
-  transform: translateX(100%);
-  opacity: 1;
-  z-index: 5;
-  -webkit-animation: show 0.6s;
-          animation: show 0.6s; }
-
-@-webkit-keyframes show {
-  0%,
-  49.99% {
-    opacity: 0;
-    z-index: 1; }
-  50%,
-  100% {
-    opacity: 1;
-    z-index: 5; } }
-
-@keyframes show {
-  0%,
-  49.99% {
-    opacity: 0;
-    z-index: 1; }
-  50%,
-  100% {
-    opacity: 1;
-    z-index: 5; } }
-
-.register-page .overlay-container {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 50%;
-  height: 100%;
-  overflow: hidden;
-  transition: transform 0.6s ease-in-out;
-  z-index: 100; }
-
-.register-page .container.right-panel-active .overlay-container {
-  transform: translateX(-100%); }
-
-.register-page .overlay {
-  background: #5e72e4;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 0 0;
-  color: #fff;
-  position: relative;
-  left: -100%;
-  height: 100%;
-  width: 200%;
-  transform: translateX(0);
-  transition: transform 0.6s ease-in-out; }
-
-.register-page .container.right-panel-active .overlay {
-  transform: translateX(50%); }
-
-.register-page .overlay-panel {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0 40px;
-  text-align: center;
-  top: 0;
-  height: 100%;
-  width: 50%;
-  transform: translateX(0);
-  transition: transform 0.6s ease-in-out; }
-
-.register-page .overlay-left {
-  transform: translateX(-20%); }
-
-.register-page .container.right-panel-active .overlay-left {
-  transform: translateX(0); }
-
-.register-page .overlay-right {
-  right: 0;
-  transform: translateX(0); }
-
-.register-page .container.right-panel-active .overlay-right {
-  transform: translateX(20%); }
-
-@media (max-width: 767.98px) {
-  .register-page form {
-    padding: 0 10px !important; }
-    .register-page form > h2 {
-      line-height: 1.3 !important; } }
-
-@media (max-width: 375px) {
-  .register-page h1 {
-    font-size: 1.5rem; }
-  .register-page .overlay-panel {
-    padding: 0 15px; }
-  .register-page .social-container {
-    margin: 10px 0 !important; }
-  .register-page form {
-    padding: 30px 10px 0 10px !important; } }
 
 .card-blog {
   overflow: hidden; }
@@ -19296,8 +19105,9 @@ header {
     bottom: 60px; }
   .page-header > .container,
   .page-header > .container-fluid {
-    padding-top: 12vh;
-    padding-bottom: 40px; }
+    /* padding-top: 2vh; */
+    padding-bottom: 40px;
+  }
   .page-header .page-header-image {
     position: absolute;
     background-size: cover;
@@ -19473,8 +19283,9 @@ header {
       position: absolute;
       top: 0;
       left: 0;
-      width:100%;
+      width:100vw;
       height:100vh;
+      overflow: hidden;
       background-size: cover !important;
       background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url("../../assets/img/GOJI-IELTS-3.jpg") fixed;
       /* background-color: #2C2C2C; */
