--- a/assets/css/argon-design-system.css
+++ b/assets/css/argon-design-system.css
@@ -18608,7 +18608,7 @@ header {
   width:100%;
   height:100%;
   background-size: cover !important;
-  background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url("../../assets/img/GOJI-IELTS-3.jpg") fixed;
+  background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url("../../assets/img/GOJI-IELTS-3.webp") fixed;
   /* background-color: #2C2C2C; */
   opacity: .88;
   z-index: 1; }
