--- a/assets/css/argon-design-system.css
+++ b/assets/css/argon-design-system.css
@@ -4428,7 +4428,12 @@ button.bg-dark:focus {
   background-color: #0a0c0d !important; }
 
 .bg-default {
-  background-color: #172b4d !important; }
+  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
+  border: 0;
+  /* background-color: #172b4d !important;  */
+  /* background-size: cover; */
+  /* background: linear-gradient(RGBA(250, 250, 250, 0.9),RGBA(250, 250, 250, 0.9)), url("../../assets/img/ill/register_bg.png") fixed; */
+}
 
 a.bg-default:hover, a.bg-default:focus,
 button.bg-default:hover,
